--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.95);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(0.95);
+  }
+}
 body {
   font-family: "Poetsen One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: #755555;
-  color: #c5baba;
+  background-image: url("https://cdn.kibrispdr.org/data/749/netflix-background-image-25.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #b6d3ce;
+  height: 100vh;
 }
 
 .loginContainer {
@@ -20,31 +35,34 @@ body {
   width: 200px;
   height: 200px;
   font-size: 50px;
-  background-color: #8d5f5f;
+  background: #1e1b1b;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 5px 15px;
   user-select: none;
-  transition: scale 0.5s ease, box-shadow 0.5s ease;
+  transition: scale 0.5s ease, box-shadow 0.5s ease, color 0.5s ease;
   border-radius: 50%;
 }
 .loginBox:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   scale: 1.1;
   cursor: pointer;
+  color: #fbdfff;
 }
 
 .button {
   text-decoration: none;
   user-select: none;
-  transition: scale 0.5s ease;
+  transition: scale 0.5s ease, color 0.5s ease;
   width: fit-content;
+  font-size: 30px;
 }
 .button:hover {
   scale: 1.1;
   cursor: pointer;
+  color: #fbdfff;
 }
 
-.movieCreation {
+#movieCreation {
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -52,16 +70,180 @@ body {
   align-items: center;
   justify-content: center;
   position: fixed;
-  background-color: #8d5f5f;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  left: -100px;
+  background: #1e1b1b;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 5px 15px;
+  left: -260px;
+  transition: left 0.5s ease, box-shadow 0.5s ease, scale 0.5s ease, padding-right 1s ease;
+  z-index: 9999;
+  top: 200px;
+  padding-right: 100px;
+  padding-left: 60px;
+  border-radius: 20px;
 }
-.movieCreation:before {
+#movieCreation:before {
   content: "Create movie";
   position: absolute;
-  left: -10px;
-  width: 100%;
+  right: 10px;
+  width: fit-content;
   height: 100%;
+  rotate: 90deg;
+  bottom: 10px;
+  user-select: none;
+  transition: opacity 0.5s ease, scale 0.5s ease;
+  font-size: 30px;
+  top: 0;
+  scale: 0.9;
+  animation: scaleUp 1s infinite linear;
+}
+#movieCreation:hover {
+  left: 0;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  scale: 1.3;
+  padding-right: 30px;
+}
+#movieCreation:hover::before {
+  opacity: 0;
+  z-index: -50;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input {
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  background-color: #b6d3ce;
+  padding: 5px;
+}
+
+#movieList {
+  display: flex;
+  padding: 200px;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.movie {
+  background-color: #1e1b1b;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 200px;
+  height: 400px;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 5px 15px;
+  transition: scale 0.5s ease, box-shadow 0.5s ease;
+  border-radius: 10px;
+}
+.movie:hover {
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  scale: 1.1;
+  cursor: pointer;
+  user-select: none;
+}
+.movie img {
+  width: 90%;
+  height: 150px;
+}
+
+#singleMovie {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  height: 600px;
+  position: fixed;
+  top: 200px;
+  left: 30%;
+  background-color: #1e1b1b;
+  box-shadow: rgba(1, 1, 1, 0.35) 0px 5px 15px;
+  transition: scale 0.3s ease;
+  border-radius: 10px;
+  overflow-y: auto;
+}
+
+#singleMovieImage {
+  background-image: url("https://t3.ftcdn.net/jpg/04/81/76/22/360_F_481762281_Xcvl3QsGh1pBMvQuyKIoIqq8aYksXEwX.jpg");
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+#singleMovieClose {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 30px;
+  border: 3px solid #b6d3ce;
+  font-weight: 700;
+  border-radius: 50%;
+  width: 25px;
+  height: 20px;
+  display: flex;
+  padding-bottom: 3px;
+  justify-content: center;
+  align-items: center;
+}
+#singleMovieClose:hover {
+  border: 3px solid #fbdfff;
+}
+
+#singleMovieSeats {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
+  width: 90%;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.seat {
+  background-color: #b6d3ce;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  color: #1e1b1b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: scale 0.5s ease;
+}
+.seat:hover {
+  scale: 1.1;
+  user-select: none;
+  cursor: pointer;
+}
+
+#singleMovieTitle {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  font-size: 50px;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+
+.toolBar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
