--- a/style.scss
+++ b/style.scss
@@ -1,15 +1,33 @@
-$backgroundColor-main: #755555;
-$backgroundColor-secondary: #8d5f5f;
-$color-main: #c5baba;
-$shadowbox-normal: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-$shadowbox-lifted: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+$backgroundColor-main: #1e1b1b;
+$color-main: #b6d3ce;
+$shadowbox-normal: rgba(1, 1, 1, 0.35) 0px 5px 15px;
+$shadowbox-lifted: rgba(1, 1, 1, 0.35) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 $font-big: 50px;
+$font-average: 30px;
+$trigger-color: #fbdfff;
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(0.95);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(0.95);
+  }
+}
+
 body {
   font-family: "Poetsen One", sans-serif;
   font-weight: 400;
   font-style: normal;
-  background-color: $backgroundColor-main;
+  background-image: url("https://cdn.kibrispdr.org/data/749/netflix-background-image-25.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   color: $color-main;
+  height: 100vh;
 }
 .loginContainer {
   display: flex;
@@ -24,29 +42,32 @@ body {
   width: 200px;
   height: 200px;
   font-size: $font-big;
-  background-color: $backgroundColor-secondary;
+  background: $backgroundColor-main;
   align-items: center;
   box-shadow: $shadowbox-normal;
   user-select: none;
-  transition: scale 0.5s ease, box-shadow 0.5s ease;
+  transition: scale 0.5s ease, box-shadow 0.5s ease, color 0.5s ease;
   border-radius: 50%;
   &:hover {
     box-shadow: $shadowbox-lifted;
     scale: 1.1;
     cursor: pointer;
+    color: $trigger-color;
   }
 }
 .button {
   text-decoration: none;
   user-select: none;
-  transition: scale 0.5s ease;
+  transition: scale 0.5s ease,color 0.5s ease;
   width: fit-content;
+  font-size: $font-average;
   &:hover {
     scale: 1.1;
     cursor: pointer;
+    color: $trigger-color;
   }
 }
-.movieCreation {
+#movieCreation {
   display: flex;
   flex-direction: column;
   padding: 20px;
@@ -54,14 +75,169 @@ body {
   align-items: center;
   justify-content: center;
   position: fixed;
-  background-color: $backgroundColor-secondary;
+  background: $backgroundColor-main;
   box-shadow: $shadowbox-normal;
-  left: -100px;
+  left: -260px;
+  transition: left 0.5s ease, box-shadow 0.5s ease, scale 0.5s ease, padding-right 1s ease;
+  z-index: 9999;
+  top: 200px;
+  padding-right: 100px;
+  padding-left: 60px;
+  border-radius: 20px;
   &:before {
     content: 'Create movie';
     position: absolute;
-    left: -10px;
-    width: 100%;
+    right: 10px;
+    width: fit-content;
     height: 100%;
+    rotate: 90deg;
+    bottom: 10px;
+    user-select: none;
+    transition: opacity 0.5s ease,scale 0.5s ease;
+    font-size: $font-average;
+    top: 0;
+    scale: 0.9;
+    animation: scaleUp 1s infinite linear;
   }
+  &:hover {
+    left: 0;
+    box-shadow: $shadowbox-lifted;
+    scale: 1.3;
+    padding-right: 30px;
+    &::before {
+      opacity: 0;
+      z-index: -50;
+    }
+  }
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+input {
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  background-color: $color-main;
+  padding: 5px;
+}
+#movieList {
+  display: flex;
+  padding: 200px;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.movie {
+  background-color: $backgroundColor-main;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 200px;
+  height: 400px;
+  box-shadow: $shadowbox-normal;
+  transition: scale 0.5s ease, box-shadow 0.5s ease;
+  border-radius: 10px;
+  &:hover{
+    box-shadow: $shadowbox-lifted;
+    scale: 1.1;
+    cursor: pointer;
+    user-select: none;
+  }
+  img {
+    width: 90%;
+    height: 150px;
+  }
+}
+#singleMovie {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  width: 800px;
+  height: 600px;
+  position: fixed;
+  top: 200px;
+  left: 30%;
+  background-color: $backgroundColor-main;
+  box-shadow: $shadowbox-normal;
+  transition: scale 0.3s ease;
+  border-radius: 10px;
+  overflow-y: auto;
+}
+#singleMovieImage {
+  background-image: url("https://t3.ftcdn.net/jpg/04/81/76/22/360_F_481762281_Xcvl3QsGh1pBMvQuyKIoIqq8aYksXEwX.jpg");
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+#singleMovieClose {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: $font-average;
+  border: 3px solid $color-main;
+  font-weight: 700;
+  border-radius: 50%;
+  width: 25px;
+  height: 20px;
+  display: flex;
+  padding-bottom: 3px;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    border: 3px solid $trigger-color;
+  }
+}
+#singleMovieSeats {
+  position: absolute;
+  bottom: 50px;
+  left: 20px;
+  width: 90%;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.seat {
+  background-color: $color-main;
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  color: #1e1b1b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: scale 0.5s ease;
+  &:hover {
+    scale: 1.1;
+    user-select: none;
+    cursor: pointer;
+  }
+}
+#singleMovieTitle {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  font-size: $font-big;
+  width: 40%;
+  display: flex;
+  justify-content: center;
+}
+.toolBar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
