--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ body {
   background-image: url("https://cdn.kibrispdr.org/data/749/netflix-background-image-25.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
   color: #b6d3ce;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .loginContainer {
@@ -129,6 +130,7 @@ input {
   padding: 200px;
   flex-wrap: wrap;
   gap: 30px;
+  user-select: none;
 }
 
 .movie {
@@ -153,6 +155,7 @@ input {
 .movie img {
   width: 90%;
   height: 150px;
+  border-radius: 10px;
 }
 
 #singleMovie {
@@ -160,10 +163,10 @@ input {
   justify-content: center;
   align-items: center;
   width: 800px;
-  height: 600px;
+  height: 700px;
   position: fixed;
-  top: 200px;
-  left: 30%;
+  top: 50px;
+  left: 25%;
   background-color: #1e1b1b;
   box-shadow: rgba(1, 1, 1, 0.35) 0px 5px 15px;
   transition: scale 0.3s ease;
@@ -181,6 +184,7 @@ input {
   position: absolute;
   top: 20px;
   left: 20px;
+  border-radius: 10px;
 }
 
 #singleMovieClose {
@@ -204,8 +208,8 @@ input {
 
 #singleMovieSeats {
   position: absolute;
-  bottom: 50px;
-  left: 20px;
+  bottom: 40px;
+  left: 6%;
   width: 90%;
   display: flex;
   gap: 20px;
@@ -214,6 +218,7 @@ input {
 
 .seat {
   background-color: #b6d3ce;
+  padding: 10px;
   width: 100px;
   height: 100px;
   border-radius: 10px;
