--- a/style.scss
+++ b/style.scss
@@ -25,9 +25,10 @@ body {
   background-image: url("https://cdn.kibrispdr.org/data/749/netflix-background-image-25.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
   color: $color-main;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
 .loginContainer {
   display: flex;
@@ -133,6 +134,7 @@ input {
   padding: 200px;
   flex-wrap: wrap;
   gap: 30px;
+  user-select: none;
 }
 .movie {
   background-color: $backgroundColor-main;
@@ -155,6 +157,7 @@ input {
   img {
     width: 90%;
     height: 150px;
+    border-radius: 10px;
   }
 }
 #singleMovie {
@@ -162,10 +165,10 @@ input {
   justify-content: center;
   align-items: center;
   width: 800px;
-  height: 600px;
+  height: 700px;
   position: fixed;
-  top: 200px;
-  left: 30%;
+  top: 50px;
+  left: 25%;
   background-color: $backgroundColor-main;
   box-shadow: $shadowbox-normal;
   transition: scale 0.3s ease;
@@ -182,6 +185,7 @@ input {
   position: absolute;
   top: 20px;
   left: 20px;
+  border-radius: 10px;
 }
 #singleMovieClose {
   position: absolute;
@@ -203,8 +207,8 @@ input {
 }
 #singleMovieSeats {
   position: absolute;
-  bottom: 50px;
-  left: 20px;
+  bottom: 40px;
+  left: 6%;
   width: 90%;
   display: flex;
   gap: 20px;
@@ -212,6 +216,7 @@ input {
 }
 .seat {
   background-color: $color-main;
+  padding: 10px;
   width: 100px;
   height: 100px;
   border-radius: 10px;
